<?xml version="1.0"?>
<package format="2">
  <name>aloam_velodyne</name>
  <version>0.0.0</version>
  <description>
    This is an advanced implementation of LOAM.
    LOAM is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
    Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  
  <depend>eigen3</depend>
  <depend>ceres-solver</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>